# claude-code-plugins

./: .gitignore  LICENSE  README.md
.claude-plugin/: marketplace.json
.claude/skills/integration-test/: SKILL.md  test-scenarios.md
plugins/async-worker-manager/: README.md  mcp-config.json  pyproject.toml
plugins/async-worker-manager/.claude-plugin/: plugin.json
plugins/async-worker-manager/skills/async-workers/: SKILL.md  examples.md
plugins/async-worker-manager/skills/plan/: SKILL.md  examples.md
plugins/async-worker-manager/src/: __init__.py  models.py  permission_proxy.py  permissions_config.json  server.py  task_intercept.py  unix_socket_manager.py
plugins/async-worker-manager/tests/: conftest.py  test_integration.py  test_server.py  test_unix_socket.py  test_worker_permissions.py
plugins/audio-notifications/: pyproject.toml
plugins/audio-notifications/.claude-plugin/: plugin.json
plugins/audio-notifications/scripts/: speak-notification.sh  validate-dependencies.sh
plugins/audio-notifications/src/: main.py
plugins/auto-code-review/: README.md  pyproject.toml
plugins/auto-code-review/.claude-plugin/: plugin.json
plugins/auto-code-review/src/: git_commit_intercept.py  verify_dependencies.py
